# gcdf1

./: .coveragerc  .isort.cfg  AUTHORS.md  CITATION.cff  README.md  dev_environment.yml  environment.lock.yml  environment.yml  setup.cfg  setup.py
configs/: multiwoz_user_evaluator.yaml
docs/: conf.py  index.md
getting_started/: IGCDF1.ipynb  RGCDF1.ipynb  template.ipynb
models/convlab_baselines/test/: baseline.json  dialogues_001.json  dialogues_002.json  dialogues_003.json  dialogues_004.json  dialogues_005.json  dialogues_006.json  dialogues_007.json  dialogues_008.json  dialogues_009.json  dialogues_010.json  dialogues_011.json  dialogues_012.json  dialogues_013.json  dialogues_014.json  dialogues_015.json  dialogues_016.json  dialogues_017.json  dialogues_018.json  dialogues_019.json  dialogues_020.json  dialogues_021.json  dialogues_022.json  dialogues_023.json  dialogues_024.json  dialogues_025.json  dialogues_026.json  dialogues_027.json  dialogues_028.json  dialogues_029.json  dialogues_030.json  dialogues_031.json  dialogues_032.json  schema.json
resources/: multiwoz21_canonical_map.json  multiwoz21_raw_canonical_map.json  sample_conversation.json
scripts/: get_multiwoz21_raw_canonical_map.py  preprocess_multiwoz_canonical_map.py  train_model.py
src/gcdf1/: analysis.py  evaluate_user.py  metrics.py  multiwoz_metadata.py
src/gcdf1/behaviours/: multiwoz.py
src/gcdf1/utils/: data.py  dialogue.py  evaluator.py  metrics.py  multiwoz_output.py  print.py  utils.py  visualisation.py
tests/: conftest.py  test_evaluator_utils.py
