# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = gcdf1
description = Implementation of the EANCS21 paper GCDF1: A Goal and Context Driven F-Score for Evaluating User Models
author = Alexandru Coca
author_email = ac2123@cam.ac.uk
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/alexcoca/gcdf1

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    absl-py>=0.7.0, <1.0.0
    fuzzywuzzy[speedup]>=0.17.0, <1.0.0
    importlib-metadata; python_version<"3.8"
    importlib-resources>=5.1.2, <6.0.0
    nltk>=3.6.2, <4.0.0
    numpy>=1.16.1, <2.0.0
    omegaconf>=2.1, <3.0.0
    prettyprinter>=0.18.0, <1.0.0
    more-itertools>=8.8.0, <9.0.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install gcdf1[PDF]` like:
# PDF = ReportLab; RXP

testing =
    setuptools
    pytest>=6.2.3, <7.0.0
    pytest-cov

[options.entry_points]
console_scripts =
    evaluate = gcdf1.evaluate_user:main


[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    --cov gcdf1 --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    src/gcdf1/utils/multiwoz_output.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.1
package = gcdf1
extensions =
    dsproject
    no_skeleton
    pre_commit
